force-app/main/default/objects/File_Store__c/File_Store__c.object-meta.xml
<CustomObject>
    <label>File Store</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>FileIdStore Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>