force-app/main/default/objects/File_Store__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <label>FileId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>