force-app/main/default/objects/File_Store__c/fields/LinkedRecordId__c.field-meta.xml
<CustomField>
    <fullName>LinkedRecordId__c</fullName>
    <label>LinkedRecordId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>