force-app/main/default/objects/File_Store__c/fields/ParentFolderId__c.field-meta.xml
<CustomField>
    <fullName>ParentFolderId__c</fullName>
    <label>ParentFolderId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>