force-app/main/default/objects/File_Store__c/fields/VersionData__c.field-meta.xml
<CustomField>
    <fullName>VersionData__c</fullName>
    <label>VersionData</label>
    <length>131070</length>
    <type>Html</type>
</CustomField>